Prototipo 2309 Odonto Master - Manhã

--- a/components/header.html
+++ b/components/header.html
@@ -8,7 +8,7 @@
           <strong>ATENÇÃO!</strong> Os produtos desse site são restritos à Dentistas com CRO, Clínicas Odontológicas e Estudantes de Graduação em Odontologia.
         </div>
         <div class="top-banner__login">
-          <a href="/login/index.html" class="login-link">Olá Visitante, Identifique-se aqui</a>
+          <a href="/pages/login/login.html" class="login-link" id="userGreeting">Olá Visitante, Identifique-se aqui</a>
         </div>
       </div>
     </div>
