--- a/pages/checkout/checkout.css
+++ b/pages/checkout/checkout.css
@@ -88,7 +88,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--spacing-lg);
-  margin-bottom: var(--spacing-xl);
+  margin-bottom: var(--spacing-sm);
 }
 
 .cart-item {
@@ -102,7 +102,7 @@
 
 .cart-item:hover {
   border: 1px solid var(--cor-primaria);
-  box-shadow: var(--shadow-sm);
+  
 }
 
 .cart-item__image {
